# django-drf-base-template

./: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml  security.yml  template-only.yml
apps/accounts/: models.py  permissions.py
apps/accounts/api/: serializers.py  views.py
apps/accounts/management/commands/: bootstrap_roles.py
apps/accounts/migrations/: 0001_initial.py
apps/example/: models.py  selectors.py  services.py  tasks.py
apps/example/api/: views.py
apps/example/migrations/: 0002_item_tenant.py
apps/tenants/: admin.py  apps.py  models.py
apps/tenants/migrations/: 0001_initial.py  0002_seed_public_tenant.py
config/: celery.py  context.py  exceptions.py  logging.py  metrics.py  otel.py  sentry.py  urls.py
config/middleware/: request_id.py  tenant.py
config/settings/: base.py  local.py  prod.py  test.py
deploy/k8s/: README.md  configmap.yaml  deployment-beat.yaml  deployment-web.yaml  deployment-worker.yaml  hpa.yaml  ingress.yaml  networkpolicy-async.yaml  networkpolicy.yaml  pdb-worker.yaml  pdb.yaml  secret.example.yaml  service.yaml
docs/: ha.md  observability.md  security.md
docs/adr/: 0002-multitenancy-strategy.md
docs/runbooks/: incident-response.md  rollback.md
scripts/: bootstrap.sh  start-gunicorn.sh
tests/: conftest.py
tests/accounts/: test_rbac.py
tests/example/: test_api.py  test_health.py  test_logging.py  test_metrics.py  test_runtime_defaults.py  test_services.py
